# 2024-Samsung-AI-Challenge-Black-box-Optimization

./: README.md  baseline.ipynb  pyproject.toml  requirements.txt
AutoML/: best_model.pkl
EDA/: EDA imbal.ipynb  EDA test.ipynb  EDA.ipynb  EDA_ver2.ipynb
automl_service/: environment.yml  pyproject.toml
automl_service/data/: train_resampled.csv
automl_service/diffusion_model/: simple_diffusion_model.ipynb
automl_service/diffusion_model/result/: 2-2 : Skew Adjusted (x) + MinMax Scaler - br_submission.csv  2-2 : Skew Adjusted (x) + MinMax Scaler - lr_submission.csv
automl_service/model/normalized_AutoML/: AutoML.ipynb  nor_submission.csv  norm_train_data.html  report.html
automl_service/module/: main.py
automl_service/module/auto_ml/: model.py
automl_service/module/data/: load_data.py  test.csv
automl_service/module/preprocessing/: pipeline.py  pipeline22.py
automl_service/module/visualization/: plot_tools.py
diffusion_model/: br.pkl  diffusion_model.ipynb  diffusion_model2.ipynb  gbr.pkl  lr.pkl  ridge.pkl  simple_diffusion_model.ipynb
diffusion_model/result/: 2-1 : Skew Adjusted (x) + Standard Scaler - lr_submission.csv  lightgbm.pkl
kyunghee/: Bayesian Ridge.pkl  Gradient Boosting Regressor.pkl  Huber Regressor.pkl  Linear Regression.pkl  Ridge Regression.pkl  feature_selection.ipynb
model/AutoML/: AutoML.ipynb  AutoML_submission.csv
model/boxcox/: boxcox.ipynb
model/normalized_AutoML copy/: AutoML.ipynb  best_model.pkl
module/: README.md  main.py  requirements.txt  top1_LinearRegression(n_jobs=-1).pkl  top2_Ridge(random_state=444).pkl  top3_Lars(random_state=444).pkl  top4_OrthogonalMatchingPursuit().pkl  top5_BayesianRidge().pkl  top_model_1.pkl  top_model_2.pkl  top_model_3.pkl  top_model_4.pkl  top_model_5.pkl
preprocessing/: 1_boxcox.ipynb  best_model.pkl  boxcox_submission.csv
resampled_data/: resampled_data.ipynb  result_ExtraTreesRegressor(n_jobs=-1, random_state=4496).csv  result_LGBMRegressor(device='gpu', n_jobs=-1, random_state=4496).csv  result_RandomForestRegressor(n_jobs=-1, random_state=4496).csv
sampling_service/: pyproject.toml
sampling_service/EDA/: EDA imbal.ipynb  EDA_ver2.ipynb  variables.html
sampling_service/data/: sample_submission.csv  train_resampled.csv
(+16 files in other folders)
