[tool.poetry]
name = "2024-samsung-ai-challenge-black-box-optimization"
version = "0.1.0"
description = ""
authors = ["yolee <youngsub.lee@ext.uni.lu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2.0.0"
nbdev = "^2.3.27"
jupyter = "^1.0.0"
sweetviz = "^2.3.1"
gplearn = "^0.4.2"
imbalanced-learn = "^0.12.3"
imbalanced-ensemble = "^0.2.2"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
