[tool.poetry]
name = "2024-samsung-ai-challenge-black-box-optimization"
version = "0.1.0"
description = ""
authors = ["yolee <youngsub.lee@ext.uni.lu>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
kaleido = "0.2.1"
pycaret = "^3.3.2"
imbalanced-learn = "^0.12.3"
torch = "^2.4.0"
nbdev = "^2.3.27"
jupyter = "^1.0.0"
sweetviz = "^2.3.1"
scikit-learn = "<1.5.0"


[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
